First Function Done

--- a/Data Programming - Assignment 3.ipynb
+++ b/Data Programming - Assignment 3.ipynb
@@ -25,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys \n",
@@ -66,12 +64,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import os.path\n",
+    "\n",
+    "def get_file_name(web_file):\n",
+    "\n",
+    "    if not web_file:\n",
+    "        sys.exit('Please give a valid URL')\n",
+    "\n",
+    "    URL=web_file.split(\"/\")\n",
+    "    return URL[-1]\n",
+    "\n",
+    "\n",
+    "def file_exists(file_name,local_dir):\n",
+    "    if not file_name:\n",
+    "        sys.exit(\"Please give a valid file name\")\n",
+    "\n",
+    "    #Appending slash--Creating valid path    \n",
+    "    if local_dir[-1]!=\"/\":\n",
+    "        local_dir+=\"/\"\n",
+    "    path=local_dir+file_name\n",
+    "\n",
+    "    if os.path.exists(path):\n",
+    "        return 0\n",
+    "    return 1\n",
+    "        \n",
+    "        \n",
     "def fetch_data(web_file, local_dir='.'):\n",
     "    \"\"\"Download the `web_file`, assuming it is a web resource into the local_dir. \n",
     "    If a file with the same filename already exists in the local directory, do not \n",
@@ -81,11 +102,18 @@
     "        local_dir: a local directory to download the web_file into (str)\n",
     "    Return: The local path to the file (str)\n",
     "    \"\"\"\n",
-    "    pass\n",
-    "data_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/assign3_data.npz') or 'assign3_data.npz'\n",
-    "lat_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/lat.npy') or 'lat.npy'\n",
-    "lon_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/lon.npy') or 'lon.npy'\n",
-    "cities_filename = fetch_data('http://download.geonames.org/export/dump/cities5000.zip') or 'cities5000.zip'"
+    "    #extracting file name\n",
+    "    file_name=get_file_name(web_file)\n",
+    "    \n",
+    "    if file_exists(file_name,local_dir):\n",
+    "        return wget.download(web_file, out=local_dir)\n",
+    "    \n",
+    "    return file_name\n",
+    "    \n",
+    "data_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/assign3_data.npz',\"/home/gelou/Desktop/\") \n",
+    "lat_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/lat.npy', \"/home/gelou/Desktop/\")\n",
+    "lon_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/lon.npy',\"/home/gelou/Desktop/\")\n",
+    "cities_filename = fetch_data('http://download.geonames.org/export/dump/cities5000.zip',\"/home/gelou/Desktop/\")"
    ]
   },
   {
@@ -98,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = np.load(data_filename)['c137']\n",
@@ -147,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def load_cities(filename='cities5000.txt'):\n",
@@ -166,7 +198,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def latlong_filter(lat1, lon1, lat2, lon2, population=5000, cities=cities):\n",
@@ -206,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def extract_time_weather(data=data, rows=224):\n",
@@ -238,7 +274,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def haversine(lat1, lon1, lat2, lon2):\n",
@@ -274,7 +312,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "all_weathers_mags = None"
