Adding Unzipping function which 1)Only unzips file if not already unzipped 2)Removes *zip file after unzipping

--- a/Data Programming - Assignment 3.ipynb
+++ b/Data Programming - Assignment 3.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys \n",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +91,8 @@
     "    path=local_dir+file_name\n",
     "\n",
     "    if os.path.exists(path):\n",
-    "        return 0\n",
-    "    return 1\n",
+    "        return 1\n",
+    "    return 0\n",
     "        \n",
     "        \n",
     "def fetch_data(web_file, local_dir='.'):\n",
@@ -105,15 +107,16 @@
     "    #extracting file name\n",
     "    file_name=get_file_name(web_file)\n",
     "    \n",
-    "    if file_exists(file_name,local_dir):\n",
+    "    if not file_exists(file_name,local_dir):\n",
     "        return wget.download(web_file, out=local_dir)\n",
     "    \n",
     "    return file_name\n",
-    "    \n",
-    "data_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/assign3_data.npz',\"/home/gelou/Desktop/\") \n",
-    "lat_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/lat.npy', \"/home/gelou/Desktop/\")\n",
-    "lon_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/lon.npy',\"/home/gelou/Desktop/\")\n",
-    "cities_filename = fetch_data('http://download.geonames.org/export/dump/cities5000.zip',\"/home/gelou/Desktop/\")"
+    "\n",
+    "dest_dir=\"/home/gelou/Desktop/\"\n",
+    "#data_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/assign3_data.npz',dest_dir) \n",
+    "lat_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/lat.npy', dest_dir)\n",
+    "lon_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/lon.npy',dest_dir)\n",
+    "#cities_filename = fetch_data('http://download.geonames.org/export/dump/cities5000.zip',dest_dir)"
    ]
   },
   {
@@ -126,12 +129,10 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load(data_filename)['c137']\n",
+    "#data = np.load(data_filename)['c137']\n",
     "lat = np.load(lat_filename)\n",
     "lon = np.load(lon_filename)"
    ]
@@ -143,6 +144,39 @@
     "The geonames data (`cities5000.zip`) contains a text file (`cities5000.txt`) of tab-separated values. The description of this data is at http://download.geonames.org/export/dump/readme.txt. It lists the geographical locations and names of the cities with a population > 5000. \n",
     "\n",
     "**Unzip `cities5000.zip` to obtain `cities5000.txt`.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/gelou/Desktop/cities5000.zip\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Unziping cities5000.zip\n",
+    "def extract_file(filename,local_dir):\n",
+    "    \"\"\"If cities5000.txt does not exits, unzip cities5000.zip and remove it\n",
+    "        *Note, assuming that the file name is the same in both compressed and uncompressed format.\n",
+    "        Only file extention (zip/txt) differ.\n",
+    "    \"\"\"\n",
+    "    if not file_exists(filename+\".txt\",local_dir):\n",
+    "\n",
+    "        import zipfile\n",
+    "        zip_ref = zipfile.ZipFile(local_dir + filename+\".zip\", 'r')\n",
+    "        zip_ref.extractall(dest_dir)\n",
+    "        zip_ref.close()\n",
+    "\n",
+    "        #removing zip file\n",
+    "        os.remove(local_dir+filename+\".zip\")\n",
+    "\n",
+    "extract_file(\"cities5000\",dest_dir)"
    ]
   },
   {
