Class draft, need to decide which getters,setters are needed + Maybe modify default constructor if there are missing values in the dataset

--- a/Data Programming - Assignment 3.ipynb
+++ b/Data Programming - Assignment 3.ipynb
@@ -191,14 +191,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it works\n"
+     ]
+    }
+   ],
    "source": [
     "class F(object):\n",
-    "    pass"
+    "    geonamesid=0\n",
+    "    name=0\n",
+    "    asciiname=0\n",
+    "    latityde=0\n",
+    "    longtitude=0\n",
+    "    country_code=0\n",
+    "    population=0\n",
+    "    elevation=0\n",
+    "    dem=0\n",
+    "    time_zone=0\n",
+    "    \n",
+    "    def _init_(geonamesid=0,name=0,asciiname=0,\\\n",
+    "               atityde=0, longtitude=0,country_code=0,\\\n",
+    "               population=0, elevation=0,dem=0, time_zone=0):\n",
+    "        self.geonamesid=geonamesid\n",
+    "        self.name=name\n",
+    "        self.asciiname=asciiname\n",
+    "        self.latityde=latityde\n",
+    "        self.longtitude=longtitude\n",
+    "        self.country_code=country_code\n",
+    "        self.population=population\n",
+    "        self.elevation=elevation\n",
+    "        self.dem=dem\n",
+    "        self.time_zone=time_zone\n",
+    "        \n",
+    "    def get_geonamesid(self):\n",
+    "        return geonamesid\n",
+    "    def get_name(self):\n",
+    "        return self.name\n",
+    "    def set_name(self,str):\n",
+    "        self.name=str\n",
+    "    \n",
+    "test=F()\n",
+    "test.set_name(\"it works\")\n",
+    "print test.get_name()"
    ]
   },
   {
