Reading CSV (selected columns) into Obj list

--- a/Data Programming - Assignment 3.ipynb
+++ b/Data Programming - Assignment 3.ipynb
@@ -191,17 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "it works\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class F(object):\n",
     "    geonamesid=0\n",
@@ -215,19 +207,18 @@
     "    dem=0\n",
     "    time_zone=0\n",
     "    \n",
-    "    def _init_(geonamesid=0,name=0,asciiname=0,\\\n",
-    "               atityde=0, longtitude=0,country_code=0,\\\n",
-    "               population=0, elevation=0,dem=0, time_zone=0):\n",
-    "        self.geonamesid=geonamesid\n",
-    "        self.name=name\n",
-    "        self.asciiname=asciiname\n",
-    "        self.latityde=latityde\n",
-    "        self.longtitude=longtitude\n",
-    "        self.country_code=country_code\n",
-    "        self.population=population\n",
-    "        self.elevation=elevation\n",
-    "        self.dem=dem\n",
-    "        self.time_zone=time_zone\n",
+    "    def __init__(self,elements):\n",
+    "        self.geonamesid=elements[0]\n",
+    "        self.name=elements[1]\n",
+    "        self.asciiname=elements[2]\n",
+    "        self.latityde=elements[3]\n",
+    "        self.longtitude=elements[4]\n",
+    "        self.country_code=elements[5]\n",
+    "        self.population=elements[6]\n",
+    "        self.elevation=elements[7]\n",
+    "        self.dem=elements[8]\n",
+    "        self.time_zone=elements[9]\n",
+    "       \n",
     "        \n",
     "    def get_geonamesid(self):\n",
     "        return geonamesid\n",
@@ -235,10 +226,7 @@
     "        return self.name\n",
     "    def set_name(self,str):\n",
     "        self.name=str\n",
-    "    \n",
-    "test=F()\n",
-    "test.set_name(\"it works\")\n",
-    "print test.get_name()"
+    "    "
    ]
   },
   {
@@ -250,15 +238,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ordino\n"
+     ]
+    }
+   ],
    "source": [
+    "import pandas\n",
+    "\n",
     "def load_cities(filename='cities5000.txt'):\n",
     "    \"\"\"Parse cities5000.txt and return a list containing a subset of its fields.\"\"\"\n",
-    "    pass\n",
+    "    \n",
+    "    #Selecting the columns\n",
+    "    coln_index=[0,1,2,4,5,8,14,15,16,17] \n",
+    "    obj_list=[]\n",
+    "    #Reading csv into np array\n",
+    "    table = pandas.read_csv(dest_dir+\"cities5000.txt\", usecols=coln_index, delimiter=\"\\t\",header=0).as_matrix()\n",
+    "\n",
+    "    #Calling User Defined Constructor\n",
+    "    obj_list=[F(i) for i in table]\n",
+    "    \n",
+    "    \n",
     "cities = load_cities()"
    ]
   },
