Selecting area (europe in our case) given geolocation

--- a/Data Programming - Assignment 3.ipynb
+++ b/Data Programming - Assignment 3.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
     "        self.geonamesid=elements[0]\n",
     "        self.name=elements[1]\n",
     "        self.asciiname=elements[2]\n",
-    "        self.latityde=elements[3]\n",
+    "        self.latitude=elements[3]\n",
     "        self.longtitude=elements[4]\n",
     "        self.country_code=elements[5]\n",
     "        self.population=elements[6]\n",
@@ -220,13 +220,12 @@
     "        self.time_zone=elements[9]\n",
     "       \n",
     "        \n",
-    "    def get_geonamesid(self):\n",
-    "        return geonamesid\n",
-    "    def get_name(self):\n",
-    "        return self.name\n",
-    "    def set_name(self,str):\n",
-    "        self.name=str\n",
-    "    "
+    "    def get_lat(self):\n",
+    "        return self.latitude\n",
+    "    def get_long(self):\n",
+    "        return self.longtitude\n",
+    "    def get_population(self):\n",
+    "        return self.population"
    ]
   },
   {
@@ -238,17 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ordino\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas\n",
     "\n",
@@ -263,7 +254,7 @@
     "\n",
     "    #Calling User Defined Constructor\n",
     "    obj_list=[F(i) for i in table]\n",
-    "    \n",
+    "    return obj_list\n",
     "    \n",
     "cities = load_cities()"
    ]
@@ -277,17 +268,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 174,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def latlong_filter(lat1, lon1, lat2, lon2, population=5000, cities=cities):\n",
     "    \"\"\"Return a sublist of the geonames cities from a northwestern point (`lat1`, `lon1`) \n",
     "       to a southeastern point (`lat2`, `lon2`) and with a minimum population of `population`\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    eur_cities=[i for i in cities if  i.get_population() >= population \\\n",
+    "                and i.get_lat()>=lat2 and  i.get_lat()<=lat1\\\n",
+    "                and i.get_long()>=lon1 and  i.get_long()<=lon2]\n",
+    "            \n",
+    "    return eur_cities\n",
     "\n",
     "LAT1 = 58.070942\n",
     "LON1 = -9.493621\n",
