--- a/Data Programming - Assignment 3.ipynb
+++ b/Data Programming - Assignment 3.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,15 +108,15 @@
     "    file_name=get_file_name(web_file)\n",
     "    \n",
     "    if not file_exists(file_name,local_dir):\n",
-    "        return wget.download(web_file, out=local_dir)\n",
+    "        return get_file_name(wget.download(web_file, out=local_dir))\n",
     "    \n",
     "    return file_name\n",
     "\n",
     "dest_dir=\"/home/gelou/Desktop/\"\n",
-    "#data_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/assign3_data.npz',dest_dir) \n",
-    "lat_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/lat.npy', dest_dir)\n",
-    "lon_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/lon.npy',dest_dir)\n",
-    "#cities_filename = fetch_data('http://download.geonames.org/export/dump/cities5000.zip',dest_dir)"
+    "data_filename = fetch_data('http://iit.demokritos.gr/~iaklampanos/assign3_data_v2.npz',dest_dir) \n",
+    "lat_filename =fetch_data('http://iit.demokritos.gr/~iaklampanos/lat.npy', dest_dir)\n",
+    "lon_filename =fetch_data('http://iit.demokritos.gr/~iaklampanos/lon.npy',dest_dir)\n",
+    "cities_filename =fetch_data('http://download.geonames.org/export/dump/cities5000.zip',dest_dir)"
    ]
   },
   {
@@ -128,13 +128,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#data = np.load(data_filename)['c137']\n",
-    "lat = np.load(lat_filename)\n",
-    "lon = np.load(lon_filename)"
+    "#TEST THIS BY DOWNLOADING THE FILE AGAIN \n",
+    "#data = np.load(dest_dir+data_filename)['c137']\n",
+    "data = np.load(dest_dir+data_filename)['c137']\n",
+    "lat = np.load(dest_dir+lat_filename)\n",
+    "lon = np.load(dest_dir+lon_filename)"
    ]
   },
   {
@@ -148,17 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/gelou/Desktop/cities5000.zip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Unziping cities5000.zip\n",
     "def extract_file(filename,local_dir):\n",
@@ -191,8 +185,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class F(object):\n",
@@ -237,8 +233,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas\n",
@@ -268,8 +266,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def latlong_filter(lat1, lon1, lat2, lon2, population=5000, cities=cities):\n",
@@ -312,14 +312,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "global name 'DATA' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-cf5a099c9297>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0mDATA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtimes_weathers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_time_weather\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;31m# assert(times_weathers[0,1][0,0].shape == (64, 64))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-26-cf5a099c9297>\u001b[0m in \u001b[0;36mextract_time_weather\u001b[0;34m(data, rows)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mextract_time_weather\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m224\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mprint\u001b[0m \u001b[0mDATA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtimes_weathers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_time_weather\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# assert(times_weathers[0,1][0,0].shape == (64, 64))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 'DATA' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def extract_time_weather(data=data, rows=224):\n",
-    "    pass\n",
+    "    print data\n",
+    "    \n",
     "times_weathers = extract_time_weather()\n",
     "# assert(times_weathers[0,1][0,0].shape == (64, 64))"
    ]
