Converting latitude,longitude to grid descriptors (64x64)

--- a/Data Programming - Assignment 3.ipynb
+++ b/Data Programming - Assignment 3.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "metadata": {
     "collapsed": true
    },
@@ -202,7 +202,7 @@
     "    name=0\n",
     "    asciiname=0\n",
     "    latityde=0\n",
-    "    longtitude=0\n",
+    "    longitude=0\n",
     "    country_code=0\n",
     "    population=0\n",
     "    elevation=0\n",
@@ -214,7 +214,7 @@
     "        self.name=elements[1]\n",
     "        self.asciiname=elements[2]\n",
     "        self.latitude=elements[3]\n",
-    "        self.longtitude=elements[4]\n",
+    "        self.longitude=elements[4]\n",
     "        self.country_code=elements[5]\n",
     "        self.population=elements[6]\n",
     "        self.elevation=elements[7]\n",
@@ -225,7 +225,7 @@
     "    def get_lat(self):\n",
     "        return self.latitude\n",
     "    def get_long(self):\n",
-    "        return self.longtitude\n",
+    "        return self.longitude\n",
     "    def get_population(self):\n",
     "        return self.population"
    ]
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -318,17 +318,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 129,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[  1.87543354e+01   1.96306496e+01   2.03473854e+01 ...,   4.47895699e+01\n",
+      "     4.42676620e+01   4.37050095e+01]\n",
+      "  [  1.94743176e+01   2.03367710e+01   2.09251728e+01 ...,   4.51202316e+01\n",
+      "     4.49187279e+01   4.44703751e+01]\n",
+      "  [  2.01952686e+01   2.08988209e+01   2.12726936e+01 ...,   4.48553085e+01\n",
+      "     4.50657959e+01   4.48653030e+01]\n",
+      "  ..., \n",
+      "  [  3.54269385e+00   3.11811233e+00   2.60049796e+00 ...,   1.98321209e+01\n",
+      "     2.08198986e+01   2.17658615e+01]\n",
+      "  [  3.01196885e+00   2.60008001e+00   2.12043428e+00 ...,   1.91020737e+01\n",
+      "     2.00749035e+01   2.09946365e+01]\n",
+      "  [  2.55771542e+00   2.13784599e+00   1.64391005e+00 ...,   1.83401909e+01\n",
+      "     1.93618546e+01   2.03007069e+01]]\n",
+      "\n",
+      " [[  2.22369289e+01   2.23797626e+01   2.24715462e+01 ...,   3.65666809e+01\n",
+      "     3.66074905e+01   3.65863914e+01]\n",
+      "  [  2.08545189e+01   2.10295620e+01   2.11483021e+01 ...,   3.65399818e+01\n",
+      "     3.67709007e+01   3.69542847e+01]\n",
+      "  [  1.96026039e+01   1.98101578e+01   1.99307728e+01 ...,   3.63343964e+01\n",
+      "     3.67661819e+01   3.71813469e+01]\n",
+      "  ..., \n",
+      "  [  8.92798042e+00   8.74215126e+00   8.44795036e+00 ...,   2.46242676e+01\n",
+      "     2.51835327e+01   2.57072334e+01]\n",
+      "  [  8.75728130e+00   8.61779976e+00   8.35873222e+00 ...,   2.38339119e+01\n",
+      "     2.44661465e+01   2.50609646e+01]\n",
+      "  [  8.59449673e+00   8.48864079e+00   8.25254917e+00 ...,   2.27607460e+01\n",
+      "     2.34707413e+01   2.41359234e+01]]\n",
+      "\n",
+      " [[ -7.88097715e+00  -6.77257776e+00  -5.71254492e+00 ...,   2.53413315e+01\n",
+      "     2.46962585e+01   2.40396404e+01]\n",
+      "  [ -7.05587816e+00  -5.89357328e+00  -4.78489780e+00 ...,   2.74245567e+01\n",
+      "     2.67584419e+01   2.60754299e+01]\n",
+      "  [ -6.15824318e+00  -4.93948460e+00  -3.77856326e+00 ...,   2.94911537e+01\n",
+      "     2.88122540e+01   2.81137047e+01]\n",
+      "  ..., \n",
+      "  [ -2.91759758e+01  -2.97520657e+01  -3.10276394e+01 ...,   2.29065275e+00\n",
+      "     2.83512735e+00   3.38844538e+00]\n",
+      "  [ -3.36687469e+01  -3.42312737e+01  -3.55227585e+01 ...,  -1.10408986e+00\n",
+      "    -5.48867106e-01   1.89155061e-02]\n",
+      "  [ -3.79122734e+01  -3.84502525e+01  -3.97516708e+01 ...,  -4.59133387e+00\n",
+      "    -4.02774048e+00  -3.46974993e+00]]]\n"
+     ]
+    }
+   ],
    "source": [
     "def extract_time_weather(data=data, rows=224):\n",
-    "     x=data[:rows,[2,4]]\n",
-    "     return x\n",
+    "    x=data[:rows,[2,4]]\n",
+    "    return x\n",
     "    \n",
     "    \n",
     "times_weathers = extract_time_weather()\n",
-    "assert(times_weathers[0,1][0,0].shape == (64, 64))"
+    "assert(times_weathers[0,1][0,0].shape == (64, 64))\n",
+    "print times_weathers[0,1][0]\n",
+    "#print times_weathers[0,1][1]\n",
+    "#print times_weathers[0,1][2]\n"
    ]
   },
   {
@@ -353,10 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def haversine(lat1, lon1, lat2, lon2):\n",
@@ -377,7 +426,21 @@
     "\n",
     "def convert_to_xy(latitude, longitude):\n",
     "    \"\"\"Map the coordinate provided (`latitude`, `longitude`) onto the weather 64x64 grid.\"\"\"\n",
-    "    pass"
+    "\n",
+    "    from numpy import inf\n",
+    "    dist = inf #Really big number\n",
+    "    grid=[]\n",
+    "    for i in range(64):\n",
+    "        for j in range(64):\n",
+    "            temp_dist=haversine(latitude,longitude,lat[i][j],lon[i][j])\n",
+    "            if temp_dist<dist:\n",
+    "                dist=temp_dist                \n",
+    "                grid=[i,j]\n",
+    "    return grid\n",
+    "\n",
+    "coordinates=[]\n",
+    "for i in european_cities:\n",
+    "    coodrinates.append(convert_to_xy(i.get_lat(),i.get_long())"
    ]
   },
   {
