Minor Presentation Fixes

--- a/Data Programming - Assignment 3.ipynb
+++ b/Data Programming - Assignment 3.ipynb
@@ -36,7 +36,8 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.basemap import Basemap\n",
     "import wget\n",
-    "import csv"
+    "import csv\n",
+    "from numpy import inf"
    ]
   },
   {
@@ -220,7 +221,7 @@
     "        self.dem=elements[8]\n",
     "        self.time_zone=elements[9]\n",
     "       \n",
-    "        \n",
+    "  \n",
     "    def get_lat(self):\n",
     "        return self.latitude\n",
     "    def get_long(self):\n",
@@ -349,7 +350,6 @@
     "    x=data[:rows,[2,4]]\n",
     "    return x\n",
     "    \n",
-    "    \n",
     "times_weathers = extract_time_weather()\n",
     "assert(times_weathers[0,1][0,0].shape == (64, 64))"
    ]
@@ -399,8 +399,8 @@
     "def convert_to_xy(latitude, longitude):\n",
     "    \"\"\"Map the coordinate provided (`latitude`, `longitude`) onto the weather 64x64 grid.\"\"\"\n",
     "\n",
-    "    from numpy import inf\n",
-    "    dist = inf #Really big number\n",
+    "    dist = inf #Really really big number\n",
+    "\n",
     "    grid=[]\n",
     "    for i in range(64):\n",
     "        for j in range(64):\n",
@@ -410,6 +410,8 @@
     "                grid=[i,j]\n",
     "    return grid\n",
     "\n",
+    "#Creating a list to use later\n",
+    "#Contains the \"regularised\" latitude and longtitude plus the City-Obj\n",
     "coordinates=[[convert_to_xy(i.get_lat(),i.get_long()),i] for i in european_cities]"
    ]
   },
@@ -441,21 +443,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[27.533726, 14.582166, 14.21919, 24.046577]\n"
+      "Magnitude Averages Per Season\n",
+      "Winter:  27.5337\n",
+      "Spring:  14.5822\n",
+      "Summer:  14.2192\n",
+      "Autumn:  24.0466\n"
      ]
     }
    ],
    "source": [
     "magnitude_averages = []\n",
-    "np.roll(all_weathers_mags, 9)\n",
-    "\n",
     "#Dump info:\n",
     "#winter:Dec-Feb\n",
     "#Spring:Mar-May\n",
@@ -467,23 +471,27 @@
     "\n",
     "#Since December is in winter, in order for our calculations to easier, we roll the array\n",
     "#so as for December 1994 to be in the start of the arrray.\n",
+    "np.roll(all_weathers_mags, 9)\n",
     "\n",
     "#In this way we can split the table into 8 parts and calculate the \"per-season mean\"\n",
-    "\n",
     "\n",
     "year=112 #78hr elements\n",
     "trimester=28 #78hr elements\n",
     "\n",
     "#can be done with list comprehension, but it'll become even more unreadable\n",
-    "for i in range(4):\n",
-    "    season_mean=np.mean([ np.mean(all_weathers_mags[i*trimester:((i+1)*trimester)]),\\\n",
-    "                         np.mean(all_weathers_mags[year+(i*trimester):((i+1)*trimester+year)])] )\n",
+    "for season in range(4):\n",
+    "    season_mean=np.mean([ np.mean(all_weathers_mags[season*trimester:((season+1)*trimester)]),\\\n",
+    "                         np.mean(all_weathers_mags[year+(season*trimester):((season+1)*trimester+year)])] )\n",
     "    magnitude_averages.append(season_mean)\n",
     "\n",
     "#Default behavior of mean-->The default is to compute the mean of the flattened array.\n",
     "#https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.mean.html\n",
     "\n",
-    "print magnitude_averages\n"
+    "print \"Magnitude Averages Per Season\"\n",
+    "print \"Winter: \",magnitude_averages[0]\n",
+    "print \"Spring: \",magnitude_averages[1]\n",
+    "print \"Summer: \",magnitude_averages[2]\n",
+    "print \"Autumn: \",magnitude_averages[3]"
    ]
   },
   {
