--- a/Data Programming - Assignment 3.ipynb
+++ b/Data Programming - Assignment 3.ipynb
@@ -445,11 +445,11 @@
     "#Summer:June-Aug\n",
     "#Autumn:Sept-Nov\n",
     "\n",
-    "#Every season has 3 months which evaluate to 28 elements of 78-hr elements \n",
+    "#Every season has 3 months which evaluate to 28 * 78-hr elements \n",
     "#So every month has approximately 9 78-hr elements\n",
     "\n",
-    "#Since December is in winter, in order for our calculations to easier, we roll the array\n",
-    "#so as for December 1994 to be in the start of the arrray.\n",
+    "#Since December is in winter, in order for our calculations to be easier, we roll the array\n",
+    "#so as for December 1994 to be in the start of the array.\n",
     "np.roll(all_weathers_mags, 9)\n",
     "\n",
     "#In this way we can split the table into 8 parts and calculate the \"per-season mean\"\n",
