--- a/Data Programming - Assignment 3.ipynb
+++ b/Data Programming - Assignment 3.ipynb
@@ -579,7 +579,7 @@
     "                break #noticed that two cities may have the same \"regularised\" (lan,lon)\n",
     "    return cities     #so keeping the first one\n",
     "\n",
-    "def print_cities(season,cities):\n",
+    "def print_windiest(season,cities):\n",
     "    print \"\\n\",season\n",
     "    print\"--------------\"\n",
     "    for i in cities:\n",
@@ -593,10 +593,10 @@
     "q4_cities = find_windiest(3,all_weathers_mags)\n",
     "\n",
     "#Print 10 windiest cities per season\n",
-    "print_cities(\"Winter\",q1_cities)\n",
-    "print_cities(\"Spring\",q2_cities)\n",
-    "print_cities(\"Summer\",q3_cities)\n",
-    "print_cities(\"Autumn\",q4_cities)\n",
+    "print_windiest(\"Winter\",q1_cities)\n",
+    "print_windiest(\"Spring\",q2_cities)\n",
+    "print_windiest(\"Summer\",q3_cities)\n",
+    "print_windiest(\"Autumn\",q4_cities)\n",
     "\n",
     "\n"
    ]
